# Heising

./: .gitignore  README.md  examples.py  playaround_mean_field.py  test_field_calculators.py  test_library.py
analysis_tools/: analyze_ferromagnets.py  analyze_heisenberg_ferromagnet.py  analyze_mixed.py  read_diagnostics.py
meanfield/: __init__.py  fields.py  solvers.py  spintypes.py  systems.py  visualization.py
monte_carlo/: CMakeLists.txt  DATA.1.dat_FM_RUN  MPI_IMPLEMENTATION.md  Makefile  README.md  analyze_mc.py  analyze_results.py  diagnostic_test.cpp  generic_simulation.cpp  heisenberg_analysis.cpp  heising_main.cpp  ising_analysis.cpp  main.cpp  mc.cpp  random.h  simulation_engine.cpp  simulation_engine.h  spin_operations.cpp  spin_operations.h  spin_types.h  test_heisenberg.cpp  validation_test.cpp  verify_energy.cpp
monte_carlo/benchmarks/: performance_test.cpp
monte_carlo/examples/: main.cpp
monte_carlo/examples/4-atom_cell_CAFM/: plot_results.py
monte_carlo/examples/4-atom_cell_G-mixed/: plot_results.py
monte_carlo/examples/heisenberg_ferromagnet/: proper_simulation.toml  quick_simulation.toml  simulation.toml  test_simulation.toml
monte_carlo/examples/ising_ferromagnet/: proper_simulation.toml  quick_simulation.toml  simulation.toml
monte_carlo/examples/mixed_system/: independent_ferromagnets.toml  simulation.toml
monte_carlo/include/: mc_moves.h  mc_phases.h  mpi_wrapper.h  multi_atom.h  multi_spin.h  profiling.h  random.h  simulation_engine.h  simulation_utils.h  spin_operations.h
monte_carlo/include/io/: config_types.h  configuration_parser.h  diagnostic_utils.h  output_formatting.h
monte_carlo/src/: analyze_domain_transformation.cpp  mc_moves.cpp  mc_phases.cpp  mpi_wrapper.cpp  profiling.cpp  random.cpp  simulation_engine.cpp  simulation_utils.cpp  spin_operations.cpp
monte_carlo/src/io/: configuration_parser.cpp  diagnostic_utils.cpp
monte_carlo/tests/: io_tests.cpp  multi_atom_cell_tests.cpp  test_deterministic_mc_moves.cpp  test_mc_acceptance.cpp  test_slab_tunnel.cpp  unit_tests.cpp
monte_carlo/tests/io_test_data/: README.md
monte_carlo/tests/io_test_data/antiferromagnet/: simulation.toml
monte_carlo/tests/io_test_data/ferromagnet/: simulation.toml
monte_carlo/tests/io_test_data/invalid_kk/: simulation.toml
monte_carlo/tests/io_test_data/invalid_kk_types/: simulation.toml
monte_carlo/tests/io_test_data/invalid_mismatch/: simulation.toml
monte_carlo/tests/io_test_data/kk_system/: simulation.toml
